# corex-electron

./: .gitignore  KeyGen.html  package-lock.json  package.json  test-cpu-name.js
.agent/workflows/: build-release.md
.trae/documents/: AMD 双 CCD 拓扑分组显示支持计划.md  CPU 核心隔离策略评估报告.md  Chrome 多进程环境下的轮询机制安全性分析.md  CoreX UI 现代化改造 - 深色玻璃拟态风格.md  CoreX 品牌重塑与 CPU 识别优化计划.md  Tauri-Lite 模块化架构重构计划.md  优化内存清理逻辑：实现“清理后台、保护主角”的智能策略.md  修复托盘自动弹出 Bug 计划.md  修复状态栏核心类型后缀显示缺失计划.md  修复电源计划乱码实施计划.md  修复电源计划切换与添加反馈功能计划.md  关于软限制优化对网游帧数影响的评估报告.md  复杂亲和性设置冲突解析报告.md  多核负载均衡实现原理与游戏实战解析.md  实现应用策略时自动触发内存清理计划.md  实现模式1（理想核心）及模式菜单预留计划.md  对比分析报告：线程绑定(硬) vs 模式1(软).md  将进程硬亲和性 (SetProcessAffinityMask) 替换为基于 SetThreadIdealProcessor 的软限制计划.md  嵌入 Windows 可执行文件图标修复计划.md  构建 Windows x64 版本.md  构建与验证计划.md  核心选择应用机制解析：软限制确认.md  确认参考 tauri-v2 代码库准则.md  软件性能深度优化计划.md  隐藏 Release 版本控制台窗口计划.md  验证与功能完善计划.md
docs/: code_security_audit.md  security_analysis.md
electron/: main.js  preload.js
src/: App.jsx  index.css
src/components/: ControlBar.jsx  CoreGrid.jsx  Header.jsx  ProcessScanner.jsx  SettingsPanel.jsx  SystemOptimizer.jsx  Toast.jsx
src/data/: cpuDatabase.js
tauri-lite-refactored/: ARCHITECTURE.md  Cargo.toml
tauri-lite-refactored/src/: main.rs
tauri-lite-refactored/src/core/: config.rs  governor.rs  mod.rs  monitor.rs  ports.rs  power.rs  thread.rs  topology.rs  types.rs
tauri-lite-refactored/src/ui/: app.rs  mod.rs  tray.rs  utils.rs
tauri-lite/src/: main.rs
tauri-v2/: create_icon.py  index.html  make_assets.py  make_ico.py  package-lock.json  package.json  tailwind.config.js  vite.config.js
tauri-v2/docs/: implementation_plan.md
tauri-v2/src/: App.jsx  App.tsx  index.css  main.jsx  tauriApi.js  types.ts
tauri-v2/src-tauri/: 2  Cargo.toml  app.manifest  build.rs  tauri.conf.json
tauri-v2/src-tauri/capabilities/: default.json
tauri-v2/src-tauri/src/: config.rs  cpu_sets.rs  governor.rs  hardware.rs  hardware_topology.rs  icons.rs  lib.rs  main.rs  monitor.rs  optimizer.rs  power.rs  registry.rs  security.rs  thread.rs  tweaks.rs  watchdog.rs
tauri-v2/src/components/: ActivationDialog.jsx  ActivationDialog.tsx  AdvancedPanel.tsx  ControlBar.jsx  ControlBar.tsx  CoreGrid.jsx  CoreGrid.tsx  ErrorMessage.jsx  Header.jsx  Header.tsx  ManualOptimizer.tsx  OneClickOptimizer.tsx  ProcessScanner.jsx  ProcessScanner.tsx  SettingsPanel.jsx  SmartAffinitySelector.jsx  SmartAffinitySelector.tsx  SystemOptimizer.jsx  SystemOptimizer.tsx  Toast.tsx
tauri-v2/src/components/common/: ProcessIcon.tsx
tauri-v2/src/components/process/: ModeSelector.tsx
tauri-v2/src/components/settings/: GameListEditor.tsx  GeekEditor.tsx  MemoryCleaner.tsx  PowerSettings.tsx  SettingsPanel.tsx  SmartTrimControl.tsx  ThrottleListEditor.tsx  TimerResolution.tsx
tauri-v2/src/data/: cpuDatabase.js  cpuDatabase.ts
tools/: README.md  激活码生成器.html
