[package]
name = "tn-lite-refactored"
version = "0.1.0"
edition = "2021"
description = "Task NeXus Lite (Modular) - 原生高性能 CPU 调度工具"

[dependencies]
# UI Framework
eframe = "0.27.2"
egui = "0.27.2"

# Icon Parsing
ico = "0.3"

# System Monitoring
sysinfo = "0.31"

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File Paths & Dialogs
dirs = "5.0"
rfd = "0.14"

# System Tray
tray-icon = "0.14"
async-trait = "0.1.89"
encoding_rs = "0.8.35"
webbrowser = "1.0.6"

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
winreg = "0.55"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_ToolHelp",
    "Wdk_System_SystemInformation",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[build-dependencies]
winres = "0.1.12"
