[package]
name = "task-nexus"
version = "3.0.0"
edition = "2021"
authors = ["Task Nexus Team"]
description = "电竞性能优化工具 - Tauri v2 Edition"
license = "MIT"
repository = ""
rust-version = "1.70"

[lib]
name = "task_nexus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1.19"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["sync", "time", "rt-multi-thread"] }
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_System_Performance",
    "Win32_System_Registry",
    "Win32_System_Power",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_WindowsProgramming",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Wdk_System_SystemInformation"
]}
sysinfo = "0.31"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
