[package]
name = "task-nexus"
version = "3.0.9"
edition = "2021"
authors = ["Task Nexus Team"]
description = "电竞性能优化工具 - Tauri v2 Edition"
license = "MIT"
repository = ""
rust-version = "1.70"

[lib]
name = "task_nexus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1.19"
anyhow = "1.0"
thiserror = "1.0"
encoding_rs = "0.8"
tokio = { version = "1", features = ["sync", "time", "rt-multi-thread"] }
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tauri-plugin-dialog = "2"
aes-gcm = "0.10"
machine-uid = "0.3"
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
image = "0.25.6"
scopeguard = "1.2.0"
chrono = "0.4"
dirs = "5.0"
winreg = "0.52"
shell-words = "1.1"
reqwest = { version = "0.11", features = ["json"] }


[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_System_Performance",
    "Win32_System_Registry",
    "Win32_System_Power",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_WindowsProgramming",
    "Win32_System_Memory",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_Storage_FileSystem",
    "Win32_System_Com_Urlmon",
    "Wdk_System_SystemInformation"
] }
sysinfo = "0.31"

[features]
default = []
portable = []

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
